--- a/domain_comparison/Comparision_domain_slicing.ipynb
+++ b/domain_comparison/Comparision_domain_slicing.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:32:07.774466Z",
-     "end_time": "2023-07-05T22:32:07.794051Z"
+     "start_time": "2023-07-05T22:54:37.389215Z",
+     "end_time": "2023-07-05T22:54:37.413070Z"
     }
    },
    "outputs": [],
@@ -40,15 +40,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mann-Whitney U statistic: 730.0\n",
-      "p-value: 0.09382116724591794\n",
-      "The two lists of means do not differ significantly!\n"
+      "Mann-Whitney U statistic: 638.0\n",
+      "p-value: 0.013504513895597267\n",
+      "The two lists of means differ significantly!\n"
      ]
     }
    ],
@@ -69,8 +69,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:32:07.778605Z",
-     "end_time": "2023-07-05T22:32:07.810591Z"
+     "start_time": "2023-07-05T22:54:37.395472Z",
+     "end_time": "2023-07-05T22:54:37.423037Z"
     }
    }
   },
@@ -92,14 +92,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mann-Whitney U statistic: 90.0\n",
-      "p-value: 0.003056629228174791\n",
+      "Mann-Whitney U statistic: 58.0\n",
+      "p-value: 0.00012940533589153548\n",
       "The two lists of means differ significantly!\n"
      ]
     }
@@ -121,8 +121,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:32:07.789678Z",
-     "end_time": "2023-07-05T22:32:07.812052Z"
+     "start_time": "2023-07-05T22:54:37.424390Z",
+     "end_time": "2023-07-05T22:54:37.428499Z"
     }
    }
   },
@@ -137,14 +137,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 24,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mann-Whitney U statistic: 214.0\n",
-      "p-value: 0.0013573635413749211\n",
+      "Mann-Whitney U statistic: 115.0\n",
+      "p-value: 2.1042488896331867e-06\n",
       "The two lists of means differ significantly!\n"
      ]
     }
@@ -166,8 +166,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:32:07.796452Z",
-     "end_time": "2023-07-05T22:32:07.812130Z"
+     "start_time": "2023-07-05T22:54:37.429961Z",
+     "end_time": "2023-07-05T22:54:37.433598Z"
     }
    }
   },
@@ -182,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 25,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mann-Whitney U statistic: 21858.0\n",
-      "p-value: 0.0008022472324785567\n",
+      "Mann-Whitney U statistic: 20647.0\n",
+      "p-value: 0.025764958730298458\n",
       "The two lists of means differ significantly!\n"
      ]
     }
@@ -211,8 +211,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:32:07.802072Z",
-     "end_time": "2023-07-05T22:32:07.812185Z"
+     "start_time": "2023-07-05T22:54:37.434464Z",
+     "end_time": "2023-07-05T22:54:37.451078Z"
     }
    }
   },
@@ -227,15 +227,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mann-Whitney U statistic: 495.0\n",
-      "p-value: 0.08588800594393942\n",
-      "The two lists of means do not differ significantly!\n"
+      "Mann-Whitney U statistic: 429.0\n",
+      "p-value: 0.013862364569966912\n",
+      "The two lists of means differ significantly!\n"
      ]
     }
    ],
@@ -256,8 +256,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:32:07.808648Z",
-     "end_time": "2023-07-05T22:32:07.817090Z"
+     "start_time": "2023-07-05T22:54:37.439983Z",
+     "end_time": "2023-07-05T22:54:37.451432Z"
     }
    }
   },
@@ -272,14 +272,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 27,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mann-Whitney U statistic: 137.0\n",
-      "p-value: 1.2616842716604531e-09\n",
+      "Mann-Whitney U statistic: 90.0\n",
+      "p-value: 5.363809316086825e-11\n",
       "The two lists of means differ significantly!\n"
      ]
     }
@@ -301,14 +301,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:32:07.815277Z",
-     "end_time": "2023-07-05T22:32:07.820730Z"
+     "start_time": "2023-07-05T22:54:37.445160Z",
+     "end_time": "2023-07-05T22:54:37.451531Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "outputs": [
     {
      "name": "stdout",
@@ -370,21 +370,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:38:55.555831Z",
-     "end_time": "2023-07-05T22:38:55.739094Z"
+     "start_time": "2023-07-05T22:54:37.451406Z",
+     "end_time": "2023-07-05T22:54:37.704310Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:29:34.877437Z",
-     "end_time": "2023-07-05T22:29:34.878682Z"
+     "start_time": "2023-07-05T22:54:37.705023Z",
+     "end_time": "2023-07-05T22:54:37.710775Z"
     }
    }
   }
