--- a/domain_comparison/Domain_slicing_smu.ipynb
+++ b/domain_comparison/Domain_slicing_smu.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 79,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:08.510347Z",
-     "end_time": "2023-07-05T22:27:08.664694Z"
+     "start_time": "2023-07-05T22:52:35.134811Z",
+     "end_time": "2023-07-05T22:52:35.208413Z"
     }
    },
    "outputs": [],
@@ -43,11 +43,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 80,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:08.519743Z",
-     "end_time": "2023-07-05T22:27:09.842779Z"
+     "start_time": "2023-07-05T22:52:35.138907Z",
+     "end_time": "2023-07-05T22:52:36.354576Z"
     }
    },
    "outputs": [
@@ -56,7 +56,7 @@
       "text/plain": "     mutant                                   mutated_sequence  DMS_score  \\\n4       M1V  VEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.011024   \n5       M1T  TEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.100321   \n6       M1R  REEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.236274   \n10      M1L  LEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.409696   \n16      M1I  IEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.205230   \n...     ...                                                ...        ...   \n7456  D393H  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.550586   \n7460  D393G  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.492420   \n7462  D393E  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.434573   \n7464  D393A  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.567614   \n7466  D393Y  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.456873   \n\n      DMS_score_bin  position_mut AS_old AS_new  \n4              -1.0             1      M      V  \n5               1.0             1      M      T  \n6              -1.0             1      M      R  \n10             -1.0             1      M      L  \n16             -1.0             1      M      I  \n...             ...           ...    ...    ...  \n7456            1.0           393      D      H  \n7460            1.0           393      D      G  \n7462            1.0           393      D      E  \n7464            1.0           393      D      A  \n7466            1.0           393      D      Y  \n\n[2320 rows x 7 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mutant</th>\n      <th>mutated_sequence</th>\n      <th>DMS_score</th>\n      <th>DMS_score_bin</th>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th>AS_new</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4</th>\n      <td>M1V</td>\n      <td>VEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.011024</td>\n      <td>-1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>V</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>M1T</td>\n      <td>TEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.100321</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>T</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>M1R</td>\n      <td>REEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.236274</td>\n      <td>-1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>R</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>M1L</td>\n      <td>LEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.409696</td>\n      <td>-1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>L</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>M1I</td>\n      <td>IEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.205230</td>\n      <td>-1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>I</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7456</th>\n      <td>D393H</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.550586</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>H</td>\n    </tr>\n    <tr>\n      <th>7460</th>\n      <td>D393G</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.492420</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>G</td>\n    </tr>\n    <tr>\n      <th>7462</th>\n      <td>D393E</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.434573</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>E</td>\n    </tr>\n    <tr>\n      <th>7464</th>\n      <td>D393A</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.567614</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>7466</th>\n      <td>D393Y</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.456873</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>Y</td>\n    </tr>\n  </tbody>\n</table>\n<p>2320 rows × 7 columns</p>\n</div>"
      },
-     "execution_count": 60,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 81,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:09.808758Z",
-     "end_time": "2023-07-05T22:27:09.914306Z"
+     "start_time": "2023-07-05T22:52:36.358048Z",
+     "end_time": "2023-07-05T22:52:36.424814Z"
     }
    },
    "outputs": [],
@@ -151,26 +151,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:09.891492Z",
-     "end_time": "2023-07-05T22:27:09.914510Z"
+     "start_time": "2023-07-05T22:52:36.424905Z",
+     "end_time": "2023-07-05T22:52:36.433797Z"
     }
    },
    "outputs": [],
    "source": [
     "t1_mean = t1_domain.mean().rename('mean')\n",
+    "t1_mean.to_csv('./data/t1_mean_smu.csv')\n",
     "\n",
     "t2_mean = t2_domain.mean().rename('mean')\n",
+    "t2_mean.to_csv('./data/t2_mean_smu.csv')\n",
     "\n",
     "pr_mean = pr_domain.mean().rename('mean')\n",
+    "pr_mean.to_csv('./data/pr_mean_smu.csv')\n",
     "\n",
     "dna_mean = dna_domain.mean().rename('mean')\n",
+    "dna_mean.to_csv('./data/dna_mean_smu.csv')\n",
     "\n",
     "tetra_mean = tetra_domain.mean().rename('mean')\n",
+    "tetra_mean.to_csv('./data/tetra_mean_smu.csv')\n",
     "\n",
-    "reg_mean = reg_domain.mean().rename('mean')\n"
+    "reg_mean = reg_domain.mean().rename('mean')\n",
+    "reg_mean.to_csv('./data/reg_mean_smu.csv')\n"
    ]
   },
   {
@@ -183,11 +189,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 83,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:09.903211Z",
-     "end_time": "2023-07-05T22:27:10.220730Z"
+     "start_time": "2023-07-05T22:52:36.462271Z",
+     "end_time": "2023-07-05T22:52:36.730490Z"
     }
    },
    "outputs": [
@@ -211,7 +217,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 63,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -248,11 +254,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 84,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:10.230446Z",
-     "end_time": "2023-07-05T22:27:10.502234Z"
+     "start_time": "2023-07-05T22:52:36.739174Z",
+     "end_time": "2023-07-05T22:52:37.002471Z"
     }
    },
    "outputs": [
@@ -268,7 +274,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 64,
+     "execution_count": 84,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -303,11 +309,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:10.508282Z",
-     "end_time": "2023-07-05T22:27:10.817082Z"
+     "start_time": "2023-07-05T22:52:37.008753Z",
+     "end_time": "2023-07-05T22:52:37.261722Z"
     }
    },
    "outputs": [
@@ -323,7 +329,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 65,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -357,11 +363,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 86,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:34:45.714317Z",
-     "end_time": "2023-07-05T22:34:46.109711Z"
+     "start_time": "2023-07-05T22:52:37.266912Z",
+     "end_time": "2023-07-05T22:52:37.574603Z"
     }
    },
    "outputs": [
@@ -385,7 +391,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 78,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -411,7 +417,6 @@
     "print(dms_scores_dna.mean())\n",
     "print(dms_scores_dna.median())\n",
     "\n",
-    "dms_scores_dna.to_csv('./data/dms_scores_dna_smu.csv')\n",
     "sns.heatmap(dna_domain)"
    ]
   },
@@ -424,11 +429,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 87,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:11.158528Z",
-     "end_time": "2023-07-05T22:27:11.407767Z"
+     "start_time": "2023-07-05T22:52:37.575336Z",
+     "end_time": "2023-07-05T22:52:37.832130Z"
     }
    },
    "outputs": [
@@ -452,7 +457,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 67,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -495,11 +500,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 88,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:11.416798Z",
-     "end_time": "2023-07-05T22:27:11.683014Z"
+     "start_time": "2023-07-05T22:52:37.838442Z",
+     "end_time": "2023-07-05T22:52:38.100987Z"
     }
    },
    "outputs": [
@@ -515,7 +520,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 68,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -552,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 89,
    "outputs": [
     {
      "data": {
@@ -596,8 +601,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:11.689334Z",
-     "end_time": "2023-07-05T22:27:11.941546Z"
+     "start_time": "2023-07-05T22:52:38.105749Z",
+     "end_time": "2023-07-05T22:52:38.258053Z"
     }
    }
   },
@@ -610,11 +615,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 90,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:11.883225Z",
-     "end_time": "2023-07-05T22:27:11.954025Z"
+     "start_time": "2023-07-05T22:52:38.258191Z",
+     "end_time": "2023-07-05T22:52:38.267816Z"
     }
    },
    "outputs": [
@@ -623,7 +628,7 @@
       "text/plain": "     t1_std    t2_std   pr_std   dna_std  tetra_std   reg_std\n0  0.130247  0.044494  0.04341  0.130621   0.110291  0.030571",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>t1_std</th>\n      <th>t2_std</th>\n      <th>pr_std</th>\n      <th>dna_std</th>\n      <th>tetra_std</th>\n      <th>reg_std</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.130247</td>\n      <td>0.044494</td>\n      <td>0.04341</td>\n      <td>0.130621</td>\n      <td>0.110291</td>\n      <td>0.030571</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 70,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,11 +663,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 91,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:11.896752Z",
-     "end_time": "2023-07-05T22:27:12.168436Z"
+     "start_time": "2023-07-05T22:52:38.270276Z",
+     "end_time": "2023-07-05T22:52:38.493925Z"
     }
    },
    "outputs": [
@@ -670,7 +675,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 71,
+     "execution_count": 91,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -690,11 +695,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 92,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:12.150433Z",
-     "end_time": "2023-07-05T22:27:12.306958Z"
+     "start_time": "2023-07-05T22:52:38.494822Z",
+     "end_time": "2023-07-05T22:52:38.651521Z"
     }
    },
    "outputs": [
@@ -702,7 +707,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 72,
+     "execution_count": 92,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -722,11 +727,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 93,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:12.308688Z",
-     "end_time": "2023-07-05T22:27:12.448135Z"
+     "start_time": "2023-07-05T22:52:38.654536Z",
+     "end_time": "2023-07-05T22:52:38.796941Z"
     }
    },
    "outputs": [
@@ -734,7 +739,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 73,
+     "execution_count": 93,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -754,11 +759,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 94,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:12.448894Z",
-     "end_time": "2023-07-05T22:27:12.760062Z"
+     "start_time": "2023-07-05T22:52:38.799189Z",
+     "end_time": "2023-07-05T22:52:39.161249Z"
     }
    },
    "outputs": [
@@ -766,7 +771,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 74,
+     "execution_count": 94,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -786,11 +791,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 95,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:12.761020Z",
-     "end_time": "2023-07-05T22:27:12.919515Z"
+     "start_time": "2023-07-05T22:52:39.162542Z",
+     "end_time": "2023-07-05T22:52:39.319961Z"
     }
    },
    "outputs": [
@@ -798,7 +803,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 75,
+     "execution_count": 95,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -818,11 +823,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 96,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:12.921041Z",
-     "end_time": "2023-07-05T22:27:13.080193Z"
+     "start_time": "2023-07-05T22:52:39.319486Z",
+     "end_time": "2023-07-05T22:52:39.484042Z"
     }
    },
    "outputs": [
@@ -830,7 +835,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 76,
+     "execution_count": 96,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -861,11 +866,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:13.081411Z",
-     "end_time": "2023-07-05T22:27:13.084197Z"
+     "start_time": "2023-07-05T22:52:39.485446Z",
+     "end_time": "2023-07-05T22:52:39.488016Z"
     }
    },
    "outputs": [
@@ -911,27 +916,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:13.084596Z",
-     "end_time": "2023-07-05T22:27:13.085721Z"
+     "start_time": "2023-07-05T22:52:39.488565Z",
+     "end_time": "2023-07-05T22:52:39.490317Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 97,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:13.086439Z",
-     "end_time": "2023-07-05T22:27:13.088001Z"
+     "start_time": "2023-07-05T22:52:39.490576Z",
+     "end_time": "2023-07-05T22:52:39.492332Z"
     }
    }
   }
