--- a/domain_comparison/Domain_slicing.ipynb
+++ b/domain_comparison/Domain_slicing.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:06.159717Z",
-     "end_time": "2023-07-05T22:27:06.211876Z"
+     "start_time": "2023-07-05T22:51:51.538933Z",
+     "end_time": "2023-07-05T22:51:51.608391Z"
     }
    },
    "outputs": [],
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:06.164045Z",
-     "end_time": "2023-07-05T22:27:06.248697Z"
+     "start_time": "2023-07-05T22:51:51.540034Z",
+     "end_time": "2023-07-05T22:51:51.622819Z"
     }
    },
    "outputs": [],
@@ -40,11 +40,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:06.197176Z",
-     "end_time": "2023-07-05T22:27:06.252207Z"
+     "start_time": "2023-07-05T22:51:51.590620Z",
+     "end_time": "2023-07-05T22:51:51.624963Z"
     }
    },
    "outputs": [
@@ -53,7 +53,7 @@
       "text/plain": "     mutant                                   mutated_sequence  DMS_score  \\\n1919  T102Q  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.516971   \n1920  T102P  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.344032   \n1921  T102R  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.224089   \n1922  T102Y  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.365929   \n1923  T102V  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.252546   \n...     ...                                                ...        ...   \n5543  K292F  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.494292   \n5544  K292E  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.211302   \n5545  K292N  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.305758   \n5546  K292A  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.420282   \n5547  K292Y  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.511485   \n\n      DMS_score_bin  position_mut AS_old AS_new  \n1919            1.0           102      T      Q  \n1920            1.0           102      T      P  \n1921            1.0           102      T      R  \n1922            1.0           102      T      Y  \n1923            1.0           102      T      V  \n...             ...           ...    ...    ...  \n5543            1.0           292      K      F  \n5544            1.0           292      K      E  \n5545            1.0           292      K      N  \n5546            1.0           292      K      A  \n5547            1.0           292      K      Y  \n\n[3629 rows x 7 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mutant</th>\n      <th>mutated_sequence</th>\n      <th>DMS_score</th>\n      <th>DMS_score_bin</th>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th>AS_new</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1919</th>\n      <td>T102Q</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.516971</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>Q</td>\n    </tr>\n    <tr>\n      <th>1920</th>\n      <td>T102P</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.344032</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>P</td>\n    </tr>\n    <tr>\n      <th>1921</th>\n      <td>T102R</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.224089</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>R</td>\n    </tr>\n    <tr>\n      <th>1922</th>\n      <td>T102Y</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.365929</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>Y</td>\n    </tr>\n    <tr>\n      <th>1923</th>\n      <td>T102V</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.252546</td>\n      <td>1.0</td>\n      <td>102</td>\n      <td>T</td>\n      <td>V</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>5543</th>\n      <td>K292F</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.494292</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>F</td>\n    </tr>\n    <tr>\n      <th>5544</th>\n      <td>K292E</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.211302</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>E</td>\n    </tr>\n    <tr>\n      <th>5545</th>\n      <td>K292N</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.305758</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>N</td>\n    </tr>\n    <tr>\n      <th>5546</th>\n      <td>K292A</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.420282</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>5547</th>\n      <td>K292Y</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.511485</td>\n      <td>1.0</td>\n      <td>292</td>\n      <td>K</td>\n      <td>Y</td>\n    </tr>\n  </tbody>\n</table>\n<p>3629 rows × 7 columns</p>\n</div>"
      },
-     "execution_count": 44,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -65,11 +65,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:06.212560Z",
-     "end_time": "2023-07-05T22:27:06.327455Z"
+     "start_time": "2023-07-05T22:51:51.611452Z",
+     "end_time": "2023-07-05T22:51:51.750969Z"
     }
    },
    "outputs": [],
@@ -130,26 +130,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 67,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:06.317739Z",
-     "end_time": "2023-07-05T22:27:06.327599Z"
+     "start_time": "2023-07-05T22:51:51.754671Z",
+     "end_time": "2023-07-05T22:51:51.764768Z"
     }
    },
    "outputs": [],
    "source": [
     "t1_mean = t1_domain.mean().rename('mean')\n",
+    "t1_mean.to_csv('./data/t1_mean.csv')\n",
     "\n",
     "t2_mean = t2_domain.mean().rename('mean')\n",
+    "t2_mean.to_csv('./data/t2_mean.csv')\n",
     "\n",
     "pr_mean = pr_domain.mean().rename('mean')\n",
+    "pr_mean.to_csv('./data/pr_mean.csv')\n",
     "\n",
     "dna_mean = dna_domain.mean().rename('mean')\n",
+    "dna_mean.to_csv('./data/dna_mean.csv')\n",
     "\n",
     "tetra_mean = tetra_domain.mean().rename('mean')\n",
+    "tetra_mean.to_csv('./data/tetra_mean.csv')\n",
     "\n",
-    "reg_mean = reg_domain.mean().rename('mean')"
+    "reg_mean = reg_domain.mean().rename('mean')\n",
+    "reg_mean.to_csv('./data/reg_mean.csv')"
    ]
   },
   {
@@ -162,11 +168,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 68,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:06.334098Z",
-     "end_time": "2023-07-05T22:27:06.646525Z"
+     "start_time": "2023-07-05T22:51:51.786144Z",
+     "end_time": "2023-07-05T22:51:52.205882Z"
     }
    },
    "outputs": [
@@ -190,7 +196,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 47,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -227,11 +233,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 69,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:06.652030Z",
-     "end_time": "2023-07-05T22:27:06.912869Z"
+     "start_time": "2023-07-05T22:51:52.213911Z",
+     "end_time": "2023-07-05T22:51:52.472919Z"
     }
    },
    "outputs": [
@@ -247,7 +253,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 48,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -282,11 +288,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 70,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:06.918798Z",
-     "end_time": "2023-07-05T22:27:07.297063Z"
+     "start_time": "2023-07-05T22:51:52.485913Z",
+     "end_time": "2023-07-05T22:51:52.731691Z"
     }
    },
    "outputs": [
@@ -302,7 +308,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 49,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -336,11 +342,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 71,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:34:21.549728Z",
-     "end_time": "2023-07-05T22:34:22.036128Z"
+     "start_time": "2023-07-05T22:51:52.736547Z",
+     "end_time": "2023-07-05T22:51:53.050163Z"
     }
    },
    "outputs": [
@@ -364,7 +370,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 62,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -390,7 +396,6 @@
     "print(dms_scores_dna.mean())\n",
     "print(dms_scores_dna.median())\n",
     "\n",
-    "dms_scores_dna.to_csv('./data/dms_scores_dna.csv')\n",
     "sns.heatmap(dna_domain)"
    ]
   },
@@ -403,11 +408,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:07.712570Z",
-     "end_time": "2023-07-05T22:27:07.982451Z"
+     "start_time": "2023-07-05T22:51:53.056589Z",
+     "end_time": "2023-07-05T22:51:53.328985Z"
     }
    },
    "outputs": [
@@ -431,7 +436,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 51,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -474,11 +479,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 73,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:07.986537Z",
-     "end_time": "2023-07-05T22:27:08.245820Z"
+     "start_time": "2023-07-05T22:51:53.334375Z",
+     "end_time": "2023-07-05T22:51:53.601253Z"
     }
    },
    "outputs": [
@@ -494,7 +499,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='position_mut-AS_old', ylabel='AS_new'>"
      },
-     "execution_count": 52,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -531,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 74,
    "outputs": [
     {
      "data": {
@@ -575,8 +580,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:08.274495Z",
-     "end_time": "2023-07-05T22:27:08.664540Z"
+     "start_time": "2023-07-05T22:51:53.603113Z",
+     "end_time": "2023-07-05T22:51:53.862261Z"
     }
    }
   },
@@ -589,11 +594,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:08.517459Z",
-     "end_time": "2023-07-05T22:27:08.665296Z"
+     "start_time": "2023-07-05T22:51:53.863275Z",
+     "end_time": "2023-07-05T22:51:53.873584Z"
     }
    },
    "outputs": [
@@ -602,7 +607,7 @@
       "text/plain": "     t1_std    t2_std    pr_std   dna_std  tetra_std   reg_std\n0  0.179812  0.043157  0.035324  0.208569    0.17976  0.042898",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>t1_std</th>\n      <th>t2_std</th>\n      <th>pr_std</th>\n      <th>dna_std</th>\n      <th>tetra_std</th>\n      <th>reg_std</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>0.179812</td>\n      <td>0.043157</td>\n      <td>0.035324</td>\n      <td>0.208569</td>\n      <td>0.17976</td>\n      <td>0.042898</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
-     "execution_count": 54,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,11 +659,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 76,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:08.530398Z",
-     "end_time": "2023-07-05T22:27:08.762458Z"
+     "start_time": "2023-07-05T22:51:53.883648Z",
+     "end_time": "2023-07-05T22:51:54.084076Z"
     }
    },
    "outputs": [
@@ -666,7 +671,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 55,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -686,11 +691,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 77,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:08.759769Z",
-     "end_time": "2023-07-05T22:27:08.963124Z"
+     "start_time": "2023-07-05T22:51:54.070726Z",
+     "end_time": "2023-07-05T22:51:54.247551Z"
     }
    },
    "outputs": [
@@ -698,7 +703,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 56,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -718,11 +723,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 78,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:08.990403Z",
-     "end_time": "2023-07-05T22:27:09.145961Z"
+     "start_time": "2023-07-05T22:51:54.249676Z",
+     "end_time": "2023-07-05T22:51:54.415141Z"
     }
    },
    "outputs": [
@@ -730,7 +735,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 57,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -750,11 +755,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 79,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:09.148400Z",
-     "end_time": "2023-07-05T22:27:09.351005Z"
+     "start_time": "2023-07-05T22:51:54.415983Z",
+     "end_time": "2023-07-05T22:51:54.586335Z"
     }
    },
    "outputs": [
@@ -762,7 +767,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 58,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -782,11 +787,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 80,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:09.351407Z",
-     "end_time": "2023-07-05T22:27:09.548801Z"
+     "start_time": "2023-07-05T22:51:54.587705Z",
+     "end_time": "2023-07-05T22:51:54.749832Z"
     }
    },
    "outputs": [
@@ -794,7 +799,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 59,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -814,11 +819,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 81,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:09.551411Z",
-     "end_time": "2023-07-05T22:27:09.717294Z"
+     "start_time": "2023-07-05T22:51:54.750886Z",
+     "end_time": "2023-07-05T22:51:55.093158Z"
     }
    },
    "outputs": [
@@ -826,7 +831,7 @@
      "data": {
       "text/plain": "<Axes: xlabel='AS_new', ylabel='AS_old'>"
      },
-     "execution_count": 60,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -855,11 +860,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:09.719289Z",
-     "end_time": "2023-07-05T22:27:09.722872Z"
+     "start_time": "2023-07-05T22:51:55.093996Z",
+     "end_time": "2023-07-05T22:51:55.097442Z"
     }
    },
    "outputs": [
@@ -905,27 +910,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:09.723723Z",
-     "end_time": "2023-07-05T22:27:09.725891Z"
+     "start_time": "2023-07-05T22:51:55.098583Z",
+     "end_time": "2023-07-05T22:51:55.099782Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 82,
    "outputs": [],
    "source": [],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:27:09.726856Z",
-     "end_time": "2023-07-05T22:27:09.728277Z"
+     "start_time": "2023-07-05T22:51:55.100579Z",
+     "end_time": "2023-07-05T22:51:55.101760Z"
     }
    }
   }
