Generating random codons

--- a/domain_comparison/Domain_slicing.ipynb
+++ b/domain_comparison/Domain_slicing.ipynb
@@ -25,11 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 85,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:51:51.540034Z",
-     "end_time": "2023-07-05T22:51:51.622819Z"
+     "start_time": "2023-07-05T23:00:30.724505Z",
+     "end_time": "2023-07-05T23:00:30.778987Z"
     }
    },
    "outputs": [],
@@ -140,22 +140,16 @@
    "outputs": [],
    "source": [
     "t1_mean = t1_domain.mean().rename('mean')\n",
-    "t1_mean.to_csv('./data/t1_mean.csv')\n",
     "\n",
     "t2_mean = t2_domain.mean().rename('mean')\n",
-    "t2_mean.to_csv('./data/t2_mean.csv')\n",
     "\n",
     "pr_mean = pr_domain.mean().rename('mean')\n",
-    "pr_mean.to_csv('./data/pr_mean.csv')\n",
     "\n",
     "dna_mean = dna_domain.mean().rename('mean')\n",
-    "dna_mean.to_csv('./data/dna_mean.csv')\n",
     "\n",
     "tetra_mean = tetra_domain.mean().rename('mean')\n",
-    "tetra_mean.to_csv('./data/tetra_mean.csv')\n",
     "\n",
-    "reg_mean = reg_domain.mean().rename('mean')\n",
-    "reg_mean.to_csv('./data/reg_mean.csv')"
+    "reg_mean = reg_domain.mean().rename('mean')"
    ]
   },
   {
