--- a/domain_comparison/Domain_slicing_rdm.ipynb
+++ b/domain_comparison/Domain_slicing_rdm.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:52:35.134811Z",
-     "end_time": "2023-07-05T22:52:35.208413Z"
+     "start_time": "2023-07-05T23:20:39.873111Z",
+     "end_time": "2023-07-05T23:20:39.877152Z"
     }
    },
    "outputs": [],
@@ -43,20 +43,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "start_time": "2023-07-05T22:52:35.138907Z",
-     "end_time": "2023-07-05T22:52:36.354576Z"
+     "start_time": "2023-07-05T23:20:42.169412Z",
+     "end_time": "2023-07-05T23:20:43.253079Z"
     }
    },
    "outputs": [
     {
      "data": {
-      "text/plain": "     mutant                                   mutated_sequence  DMS_score  \\\n4       M1V  VEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.011024   \n5       M1T  TEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.100321   \n6       M1R  REEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.236274   \n10      M1L  LEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.409696   \n16      M1I  IEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...  -0.205230   \n...     ...                                                ...        ...   \n7456  D393H  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.550586   \n7460  D393G  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.492420   \n7462  D393E  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.434573   \n7464  D393A  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.567614   \n7466  D393Y  MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...   0.456873   \n\n      DMS_score_bin  position_mut AS_old AS_new  \n4              -1.0             1      M      V  \n5               1.0             1      M      T  \n6              -1.0             1      M      R  \n10             -1.0             1      M      L  \n16             -1.0             1      M      I  \n...             ...           ...    ...    ...  \n7456            1.0           393      D      H  \n7460            1.0           393      D      G  \n7462            1.0           393      D      E  \n7464            1.0           393      D      A  \n7466            1.0           393      D      Y  \n\n[2320 rows x 7 columns]",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mutant</th>\n      <th>mutated_sequence</th>\n      <th>DMS_score</th>\n      <th>DMS_score_bin</th>\n      <th>position_mut</th>\n      <th>AS_old</th>\n      <th>AS_new</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>4</th>\n      <td>M1V</td>\n      <td>VEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.011024</td>\n      <td>-1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>V</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>M1T</td>\n      <td>TEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.100321</td>\n      <td>1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>T</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>M1R</td>\n      <td>REEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.236274</td>\n      <td>-1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>R</td>\n    </tr>\n    <tr>\n      <th>10</th>\n      <td>M1L</td>\n      <td>LEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.409696</td>\n      <td>-1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>L</td>\n    </tr>\n    <tr>\n      <th>16</th>\n      <td>M1I</td>\n      <td>IEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>-0.205230</td>\n      <td>-1.0</td>\n      <td>1</td>\n      <td>M</td>\n      <td>I</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>7456</th>\n      <td>D393H</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.550586</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>H</td>\n    </tr>\n    <tr>\n      <th>7460</th>\n      <td>D393G</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.492420</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>G</td>\n    </tr>\n    <tr>\n      <th>7462</th>\n      <td>D393E</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.434573</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>E</td>\n    </tr>\n    <tr>\n      <th>7464</th>\n      <td>D393A</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.567614</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>A</td>\n    </tr>\n    <tr>\n      <th>7466</th>\n      <td>D393Y</td>\n      <td>MEEPQSDPSVEPPLSQETFSDLWKLLPENNVLSPLPSQAMDDLMLS...</td>\n      <td>0.456873</td>\n      <td>1.0</td>\n      <td>393</td>\n      <td>D</td>\n      <td>Y</td>\n    </tr>\n  </tbody>\n</table>\n<p>2320 rows × 7 columns</p>\n</div>"
+      "text/plain": "    Original Variation 1 Variation 2 Variation 3 Variation 4 Variation 5  \\\n0        AUG         UAG         UGA         GUA         AUG         GAU   \n1        GAG         GGA         GAG         GAG         GAG         GAG   \n2        GAG         GAG         GAG         AGG         GAG         GAG   \n3        CCG         CGC         CGC         CGC         CGC         CCG   \n4        CAG         CAG         AGC         CAG         AGC         CAG   \n..       ...         ...         ...         ...         ...         ...   \n388      GGG         GGG         GGG         GGG         GGG         GGG   \n389      CCU         UCC         CCU         CCU         CCU         CCU   \n390      GAC         CGA         AGC         AGC         CGA         GAC   \n391      UCA         CUA         UCA         ACU         UAC         UAC   \n392      GAC         CAG         GAC         CGA         GCA         ACG   \n\n    Variation 6 Variation 7 Variation 8 Variation 9  \n0           UGA         AUG         UAG         UGA  \n1           GAG         GGA         GGA         GGA  \n2           GGA         AGG         GGA         GAG  \n3           CCG         GCC         GCC         GCC  \n4           CAG         AGC         GCA         AGC  \n..          ...         ...         ...         ...  \n388         GGG         GGG         GGG         GGG  \n389         CUC         CCU         CUC         UCC  \n390         CGA         ACG         GCA         ACG  \n391         AUC         AUC         UCA         AUC  \n392         AGC         CAG         CAG         ACG  \n\n[393 rows x 10 columns]",
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Original</th>\n      <th>Variation 1</th>\n      <th>Variation 2</th>\n      <th>Variation 3</th>\n      <th>Variation 4</th>\n      <th>Variation 5</th>\n      <th>Variation 6</th>\n      <th>Variation 7</th>\n      <th>Variation 8</th>\n      <th>Variation 9</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>AUG</td>\n      <td>UAG</td>\n      <td>UGA</td>\n      <td>GUA</td>\n      <td>AUG</td>\n      <td>GAU</td>\n      <td>UGA</td>\n      <td>AUG</td>\n      <td>UAG</td>\n      <td>UGA</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>GAG</td>\n      <td>GGA</td>\n      <td>GAG</td>\n      <td>GAG</td>\n      <td>GAG</td>\n      <td>GAG</td>\n      <td>GAG</td>\n      <td>GGA</td>\n      <td>GGA</td>\n      <td>GGA</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>GAG</td>\n      <td>GAG</td>\n      <td>GAG</td>\n      <td>AGG</td>\n      <td>GAG</td>\n      <td>GAG</td>\n      <td>GGA</td>\n      <td>AGG</td>\n      <td>GGA</td>\n      <td>GAG</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>CCG</td>\n      <td>CGC</td>\n      <td>CGC</td>\n      <td>CGC</td>\n      <td>CGC</td>\n      <td>CCG</td>\n      <td>CCG</td>\n      <td>GCC</td>\n      <td>GCC</td>\n      <td>GCC</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>CAG</td>\n      <td>CAG</td>\n      <td>AGC</td>\n      <td>CAG</td>\n      <td>AGC</td>\n      <td>CAG</td>\n      <td>CAG</td>\n      <td>AGC</td>\n      <td>GCA</td>\n      <td>AGC</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>388</th>\n      <td>GGG</td>\n      <td>GGG</td>\n      <td>GGG</td>\n      <td>GGG</td>\n      <td>GGG</td>\n      <td>GGG</td>\n      <td>GGG</td>\n      <td>GGG</td>\n      <td>GGG</td>\n      <td>GGG</td>\n    </tr>\n    <tr>\n      <th>389</th>\n      <td>CCU</td>\n      <td>UCC</td>\n      <td>CCU</td>\n      <td>CCU</td>\n      <td>CCU</td>\n      <td>CCU</td>\n      <td>CUC</td>\n      <td>CCU</td>\n      <td>CUC</td>\n      <td>UCC</td>\n    </tr>\n    <tr>\n      <th>390</th>\n      <td>GAC</td>\n      <td>CGA</td>\n      <td>AGC</td>\n      <td>AGC</td>\n      <td>CGA</td>\n      <td>GAC</td>\n      <td>CGA</td>\n      <td>ACG</td>\n      <td>GCA</td>\n      <td>ACG</td>\n    </tr>\n    <tr>\n      <th>391</th>\n      <td>UCA</td>\n      <td>CUA</td>\n      <td>UCA</td>\n      <td>ACU</td>\n      <td>UAC</td>\n      <td>UAC</td>\n      <td>AUC</td>\n      <td>AUC</td>\n      <td>UCA</td>\n      <td>AUC</td>\n    </tr>\n    <tr>\n      <th>392</th>\n      <td>GAC</td>\n      <td>CAG</td>\n      <td>GAC</td>\n      <td>CGA</td>\n      <td>GCA</td>\n      <td>ACG</td>\n      <td>AGC</td>\n      <td>CAG</td>\n      <td>CAG</td>\n      <td>ACG</td>\n    </tr>\n  </tbody>\n</table>\n<p>393 rows × 10 columns</p>\n</div>"
      },
-     "execution_count": 80,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -73,7 +73,7 @@
     "\n",
     "p53_codons[71] = \"CGC\"\n",
     "\n",
-    "mutated_p53 = ses.generate_codon_variations(p53_codons)\n",
+    "mutated_p53 = ses.generate_codon_variations_rdm(p53_codons)\n",
     "\n",
     "translated_p53 = ses.translate_codons_df(mutated_p53)\n",
     "\n",
@@ -81,7 +81,7 @@
     "\n",
     "df = gia_null_eto[gia_null_eto.apply(lambda row: (cleaned_p53.loc[row['position_mut']-1, 'Original'] == row['AS_old']) and (row['AS_new'] in cleaned_p53.loc[row['position_mut']-1, ['Variation 1', 'Variation 2', 'Variation 3', 'Variation 4', 'Variation 5', 'Variation 6', 'Variation 7', 'Variation 8', 'Variation 9']].values), axis=1)]\n",
     "\n",
-    "df"
+    "mutated_p53"
    ]
   },
   {
